--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,9 @@
   <title>binmatesapp</title>
   <link rel="manifest" href="manifest.json">
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJtIUDr36B31ChHpFwLI_zw1dLuGiqxgQ"></script>
+
+
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
